Fixed spacing

--- a/app/styles/layout/_header.scss
+++ b/app/styles/layout/_header.scss
@@ -109,6 +109,7 @@ $size: 75px;
     background: $color-brand;
     text-align: center;
     color: $color-white;
+    padding: $ops-spacing 0 $ops-spacing-xs;
 
     p {
         margin: 0;
